# mattutils

./: .gitignore  ABC News 24.py  Makefile  MediaWatch.py  README  addcert.sh  after  ag  auto-commit.sh  bashd.sh  bitbucket-ls.sh  c  cast.py  check_tmux_version.sh  cmake  colour-dump  compress.py  compresspdf.sh  crun  cub.c  cub.py  dd.py  dd.sh  defn.sh  dif-tests.py  dif.c  dif.cpp  diff  download  fifi.sh  find-broken.sh  fuckit-cc  fwdmail.py  g  generate-passwd  gg  git  git-cleanup.py  git-edit.py  git-increment.py  (+75 more)
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/0099fab4-5f41-467a-939e-e2d933551c07/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/0a0a813b-cc00-4288-bf5d-dfbebb4a6e26/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/0fa7955c-4074-4475-bf1a-5cdfc95320fd/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/1021eaf4-89c5-47b9-9d42-14f963ccae8d/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/1acaa1d3-6f83-410c-abf1-7a6eec46bf04/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/221da14f-53aa-4aa8-a208-47d007ce1aee/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/39be8e97-5725-4a20-8f83-72cc566f2d5e/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/4111d4f4-7eee-4254-aade-48113439268b/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/485dcf78-bdcf-40f5-b5cf-7188f618935a/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/6859fd0f-9b78-4c53-8b66-5a1776f7ca05/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/754091fc-451b-445e-86b5-c1df8e0b1326/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/7b0b83a2-e71e-41dd-8f29-892f58f76534/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/9416ff70-39fa-4976-9379-0b491c462ebd/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/bbb485bb-0b26-4bab-83ee-117b34c1ef80/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/cd1e3b12-df43-4907-84dd-4db01ce04be5/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/d4fe1fcc-21e1-4bd5-92e8-206b304636fb/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/f0aa8e94-9275-40ba-8cac-1630201a5178/: values
.be/6dc34c61-adb6-4174-8623-0a095f74a852/bugs/fe1d5a3a-64f5-4687-98c2-15d3b31102fd/: values
.github/workflows/: codeql-analysis.yml
config/: .XCompose  .Xdefaults  .agignore  .dircolors  .emacs  .fonts.conf  .gdbinit  .gitconfig  .gnomerc  .hgrc  .notme.json  .reroute-config.py  .screenrc  .tmux-1.9-workaround.conf  .tmux-modern.conf  .tmux-new-pane_current_path.conf  .tmux-new-vi-copy.conf  .tmux-old-pane_current_path.conf  .tmux-old-vi-copy.conf  .tmux-tpm.conf  .tmux.conf  .typist.json  .vimrc  .wgetrc  .zshrc  execfs.conf
config/.mplayer/: config
config/.ssh/: config
config/.vim/: filetype.vim
config/.vim/after/syntax/: c.vim  cpp.vim  gitcommit.vim  gitrebase.vim  (+2 more)
config/.vim/plugin/: cscope_maps.vim
config/.vim/spell/: en.utf-8.add
config/.vim/syntax/: be.vim  camkes.vim  capdl.vim  cmake.vim  hgignore.vim  idl4.vim  isabelle.vim  lnt.vim  mkd.vim  murphi.vim  root.vim  sal.vim  tmux.vim
config/.vim/templates/: main.c  main.cpp
config/.xmonad/: .gitignore  xmonad.hs
config/.zsh/: _mercurial  _no
config/HTTPSEverywhereUserRules/: google-reader.xml
internal/: install.sh  vnc-notes.md
libute/: CMakeLists.txt  README  test.py
libute/libute/: CMakeLists.txt
libute/libute/include/ute/: aligned_alloc.h  alloc_aligned.h  asp.h  assert.h  assume.h  attr.h  ctype.h  dict.h  dword.h  hash.h  int128.h  path.h  print.h  set.h  type_traits.h  typeof.h
libute/libute/src/: aligned_alloc.c  asp-v1.m  asp-v2.m  asp-v3.m  asp-v4.m  asp-v5.m  asp-v6.m  asp-v7.m  asp.c  attr.h  dict.h  dict_contains_.c  dict_free_.c  dict_get_.c  dict_remove_.c  dict_set_.c  dict_size_.c  dword_atomic_cas.c  dword_atomic_cas_hi.c  dword_atomic_cas_lo.c  dword_atomic_cas_n.c  dword_atomic_cas_n_hi.c  dword_atomic_cas_n_lo.c  dword_atomic_load.c  dword_atomic_load_hi.c  dword_atomic_load_lo.c  dword_atomic_store.c  dword_atomic_store_hi.c  dword_atomic_store_lo.c  dword_atomic_xchg.c  dword_atomic_xchg_hi.c  dword_atomic_xchg_lo.c  dword_zero.c  hash.c  int128_atomic_cas.c  int128_atomic_cas_n.c  int128_atomic_load.c  int128_atomic_store.c  int128_atomic_xchg.c  int128_put.c  (+49 more)
libute/test/: CMakeLists.txt
libute/test/src/: cleanup.c  main.c  test-asp-mt.c  test-asp-self-store-aba.c  test-asp-st.c  test-dict-basic.c  test-dict-conflict.c  test-dict-key-dtor.c  test-dict-mt.c  test-dict-set-contains.c  test-dict-value-dtor.c  test-int128-cas-fail-mt.c  test-int128-cas-fail.c  test-int128-cas-mt.c  test-int128-cas-ro.c  test-int128-cas.c  test-int128-load-mt.c  test-int128-load.c  test-int128-store-mt.c  test-int128-store.c  test-int128-xchg-mt.c  test-int128-xchg.c  test-is-integral.c  test-print-int128-max.c  test-print-int128-min.c  test-print-int128-small.c  test-print-uint128-max.c  test-print-uint128-small.c  test-putb.c  test-set-basic.c  test-set-conflict.c  test-set-eexist.c  test-set-mt.c  test-set-over-align.c  test-set-packed.c  test-set-user-dtor.c  test-uint128-cas-fail-mt.c  test-uint128-cas-fail.c  test-uint128-cas-mt.c  test-uint128-cas.c  (+8 more)
misc/: RTL8192CU_kernel_2.6.38.patch  alloc-monitor.c  balloon.c  brainfuck-compiler.c  cat.bf  dif.cpp  error-handling.c  fuckit-cc  hash-streaming.c  is-bound.c  linked_list.c  linked_list.h  macros.h  mem-exec.c  overloading.c  probe-mmap.c  puts-ldpreload-example.c  raii.c  ram-churn.c  recover.c  rerebase.c  signal-sniffer.c  sizeofs.sh  smartquote.c  stack-smash-hello-world.c
misc/alloc/: alloc.c  alloc.h
misc/lock-monitor/: example.c  lock-monitor.c
misc/lubuntu/: gnome-keyring-gpg.desktop.patch  gnome-keyring-pkcs11.desktop.patch  gnome-keyring-secrets.desktop.patch  gnome-keyring-ssh.desktop.patch  lubuntu-autostart.patch  lubuntu-rc.patch  mplayer-config.patch  xmodmap.patch
misc/ubuntu/: chromium-open-in-incognito-window.patch  disable-lightdm-sound.patch  fix-wireless.patch  lightdm.conf.patch
oi/: oi  oi.h
red/: README.md  detectvm.c  heap-exec.c  permissive-ptrace.c  stack-exec.c
red/blobs/: CMakeLists.txt  blobs.c
(+66 files in other folders)
